index.css
:root{
    --primary: wheat;
    --secondary: #FF6A3D;
    --background: #4A5FC180;
    --green: #1FC11B;
    --yellow: #FFD913;
    --orange: #FF9C55;
    --red: #FF5555;
}

body{
    margin: 0;
    font-family: Arima, serif;
    transition: 1s;
}

main{
    position: absolute;
    width: 99vw;
    color: var(--primary);
}

@font-face {
    font-family: Arima;
    src: url("static/font/Arima-VariableFont_wght.ttf");
}

@font-face {
    font-family: Arima-SemiBold;
    src: url("static/font/Arima-SemiBold.ttf");
}

@font-face {
    font-family: Arima-Bold;
    src: url("static/font/Arima-Bold.ttf");
}

@font-face {
    font-family: Smooch;
    src: url("static/font/Smooch-Regular.ttf");
}


/***************/
/*** General ***/
/***************/
p{
    font-size: 20px;
}

a{
    font-size: 20px;
    color: var(--primary);
    margin-left: 10px;
}

a:hover{
    color: var(--secondary);

}

canvas{
    position: fixed;
    width: 100vw;
    height: 100vh;
}

.pill{
    border: var(--secondary) solid ;
    border-radius: 50px;
    color: var(--primary);
    font-family: Arima-Bold, serif;
    background: var(--secondary);
    white-space: pre;
}

.tag{
    border: var(--secondary) solid ;
    border-radius: 50px;
    color: var(--primary);
    font-family: Arima-Bold, serif;
    background: var(--secondary);
    white-space: pre;
    font-size: 12px;
}

.font-secondary{
    color: var(--secondary);
}

.bg-my-secondary{
    background-color: var(--secondary);
}

.border-my-secondary{
    /*border: var(--secondary) solid 2px;*/
}

.border-top-my-secondary{
    border-top: var(--secondary) solid 3px;
}

.border-bt-my-secondary{
    border-bottom: var(--secondary) solid 3px;
}

.border-left-my-secondary{
    border-left: var(--secondary) solid 3px;
}

.border-right-my-secondary{
    border-right: var(--secondary) solid 3px;
}

.rotate-left{
    transform: rotate(-90deg);
}

.navbar{
    padding: 10px;
}

.navbar-nav{
    width: 100%;
}

.nav-item{
    font-family: Arima-SemiBold, serif;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
    color: #fff;
    background-color: var(--secondary);
    padding-left: 10px;
    transition: 0.5s;
}

.nav-link:hover{
    color: var(--primary);
}

.divider{
    margin: 40px auto;
    width: 80%;
    border: var(--secondary) dashed 2px;
    /*box-shadow: 0 0 12px ;*/
}

.modal-content{
    background: #4A5FC1;
}

.lead{
    font-weight: 500;
}

.central-footer{
    text-align: center;
    display: block;
}

/* loader */
.loader-wrapper{
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background: rgb(183,105,184);
    background: linear-gradient(90deg, rgba(183,105,184,0.9948354341736695) 0%, rgba(208,120,25,1) 35%, rgba(203,15,15,1) 73%, rgba(217,42,228,1) 100%);
    z-index: 100;
    display: flex;
    justify-content: center;
    align-items: center;
}

.loader{
    display: inline-block;
    width: 30px;
    height: 30px;
    position: relative;
    border: 4px solid white;
    animation: loader 2s infinite ease;
}

@keyframes loader {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(360deg)
    }
}

/****************/
/*** Specific ***/
/****************/
#cover{
    /*background-image: url("static/coverbg.jpg");*/
    position: absolute;
    z-index: 10;
    height: 100vh;
    width: 100%;
}

.name{
    font-family: Smooch, serif;
}

#content{
    position: relative;
    z-index: 10;
    top: 100vh;
}

#side-nav{
    transition: 0.5s;
}

.side-nav-fixed-top{
    height: 100vh
}

#collapse-btn{
    transition: 0.25s;
}

#collapse-btn:hover{
    color: var(--secondary);
    cursor: pointer;
}

#open-side-nav-btn{
    color: var(--primary);
    position: fixed;
    top: 20px;
    left: 20px;
    z-index: 1000;
    background-color: var(--secondary);
    padding: 5px;
    transition: 0.25s;
    display: none;
    border: var(--primary) solid 1px;
    border-radius: 25px;
}

#open-side-nav-btn:hover{
    cursor: pointer;
    background-color: forestgreen;
}

#side-content{
}

.my-card{
    /*height: 250px;*/
    margin-top: 80px;

    background-color: var(--background);
    display: block;
    min-height: 90px;
    padding: 15px;
    box-shadow: 10px -10px 0 -3px #fb6e8990, 10px -10px #fb6e8990,
    20px -20px 0 -3px #935dd690, 20px -20px #935dd690,
    30px -30px 0 -3px #e9b9ea90, 30px -30px #e9b9ea90;
    transition: box-shadow 0.5s, top 0.5s, left 0.5s;
    position: relative;
    top: 0;
    left: 0;
    cursor: pointer;
}

.my-card:hover {
    top: -30px;
    left: 30px;
    box-shadow: 0 0 0 -3px #fb6e8990, 0 0 0 0 #fb6e8990,
    0 0 0 -3px #935dd690, 0 0 0 0  #935dd690,
    0 0 0 -3px #c67fea90, 0 0 0 0  #c67fea90;
}

.my-card-short{
    width: 95%;
}

.nav-level-secondary{
    margin: 10px 0 10px 20px;
}

.projects-years{
    margin-top: 20px;
    margin-bottom: 40px;
}

.projects-img-1{
    max-width: 100%;
}

.projects-img-2{
    max-width: 48%;
}

.projects-img-3{
    max-width: 32%;
}

.modal-img-1{
    max-width: 90%;
}

.modal-img-1-5{
    max-width: 66%;
}

.modal-img-2{
    max-width: 48%;
}

.modal-img-3{
    max-width: 32%;
}

.modal-my-caption{
    font-size: 18px;
    font-style: italic;
    margin-top: 9px;
}

.modal-my-title{
    color: var(--secondary);
    font-weight: 600;
}

.my-bold-italic{
    color: var(--secondary);
    font-style: italic;
    font-weight: 600;
}

.my-bold{
    color: var(--secondary);
    font-weight: 600;
}

.my-italic{
    color: var(--secondary);
    font-style: italic;
}

